# algocoach

./: .gitignore  README.md
algo_flutter/: README.md  pubspec.yaml
algo_flutter/android/app/: build.gradle
algo_flutter/android/app/src/main/: AndroidManifest.xml
algo_flutter/android/app/src/main/kotlin/com/example/algo_flutter/: MainActivity.kt
algo_flutter/ios/Runner/: Info.plist
algo_flutter/ios/Runner.xcodeproj/: project.pbxproj
algo_flutter/lib/: main.dart
algo_flutter/lib/controllers/: topic_controller.dart
algo_flutter/lib/models/: concept.dart  problem.dart  topic.dart
algo_flutter/lib/screens/: concept_widget.dart  constants.dart  problem_widget.dart  topic_screen.dart
algo_flutter/linux/: CMakeLists.txt  my_application.cc
algo_flutter/macos/Runner.xcodeproj/: project.pbxproj
algo_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
algo_flutter/macos/Runner/Configs/: AppInfo.xcconfig
algo_flutter/test/: topic_test.dart  widget_test.dart
algo_flutter/web/: index.html  manifest.json
algo_flutter/windows/: CMakeLists.txt
algo_flutter/windows/runner/: Runner.rc  main.cpp
algo_server/: Makefile  README.md  pyproject.toml
algo_server/db/: bfs_test_new_description.txt  coach.db  create_tables.sql  topics_data.sql
algo_server/src/: db_service.py  main.py
algo_server/src/tool/: load_topics.py  topic_data.json  topic_data_all.json  update_concept.py
algo_server/tests/: test_db_service.py  test_loader.py  test_topic_data.json
